# web_mining

Labo1/: pyproject.toml  requirements.txt  search.py
Labo1/WebApp/: APIClient.py  dashboard.py
Labo1/WebApp/DTOs/: DTOs.py
Labo1/labo1_imdb/: debug_imdb.html  movies.jsonl  scrapy.cfg
Labo1/labo1_imdb/labo1_imdb/: items.py  middlewares.py  models.py  pipelines.py  settings.py
Labo1/labo1_imdb/labo1_imdb/spiders/: movie_spider.py
