[project]
name = "labo1"
version = "0.1.0"
description = "Env for Labo1"
authors = [
    {name = "Christian Agodomou",email = "christian.agodomou@etu.hesge.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["elasticsearch (<9)", "elasticsearch-dsl (>=8.18.0,<9.0.0)", "scrapy (>=2.14.1,<3.0.0)", "beautifulsoup4 (>=4.14.3,<5.0.0)", "scrapy-playwright (>=0.0.46,<0.0.47)", "playwright (>=1.58.0,<2.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"